--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-Team
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>fikirles</title>
+    <link href="css/style.css" rel="stylesheet"/>
+</head>
+<body>
+<header>
+
+    <ul>
+        <li>
+            <a href="team-members.html">Information about team members</a>
+        </li>
+        <li>
+            <a href="index2.html">Introduction of the team</a>
+        </li>
+        <li>
+            <a href="index4.html">Preparations for the Hour of Code event</a>
+        </li>
+        <li>
+            <a href="index3.html">Information about our Website project</a>
+        </li>
+    </ul>
+
+
+</header>
+
+
+<div class="content">
+
+    <div id="main-info">
+        <span> FUTURE-TECHNOLOGIES </span>
+    </div>
+
+
+</div>
+
+<footer>
+
+    <div class="footer-item-container">
+
+    </div>
+    <div class="footer-item-container">
+        <div class="contact">
+            <h3>Contact us:</h3>
+            <p>
+                <span class="contact-name-item">Email:</span>
+                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
+            </p>
+            <p>
+                <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
+            </p>
+        </div>
+    </div>
+
+    <div class="footer-item-container">
+        <div class="shortcuts">
+            <h3>Site map:</h3>
+            <p><span class="shortcut-item">Information about team members</span></p>
+            <p><span class="shortcut-item">Introduction of the team</span></p>
+            <p><span class="shortcut-item">Preparations for the Hour of Code event</span></p>
+            <p><span class="shortcut-item">Information about our Website project</span></p>
+        </div>
+    </div>
+
+    <div class="footer-item-container">
+    </div>
+
+</footer>
+</body>
+</html>
