--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>fikirles</title>
+    <title>Code brigade</title>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
-<body>
+<body id="main-page-body">
 <header>
 
     <ul>
@@ -25,16 +25,19 @@
         </li>
     </ul>
 
-
 </header>
 
 
 <div class="content">
 
-    <div id="main-info">
-        <span> FUTURE-TECHNOLOGIES </span>
+    <div id="content-header-info">
+        <span> Code Brigade </span>
     </div>
 
+
+    <div id="content-info">
+        <span> Welcome to Code Brigade </span>
+    </div>
 
 </div>
 
