--- a/team-members.html
+++ b/team-members.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade</title>
+    <title>Code brigade - Team members</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
 <body>
