redesign file names

--- a/about_hour_of_code.html
+++ b/about_hour_of_code.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade</title>
-    <link href="css/style.css" rel="stylesheet"/>
+    <title>Code brigade - Code event</title>
+    <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
 <body>
 <header>
 
     <ul>
+        <li style="float: left;">
+            <a href="index.html">
+                <img style="width: 50px;" src="media/logo.png" alt="Logo">
+            </a>
+        </li>
         <li>
             <a href="about_team_members.html">Information about team members</a>
         </li>
@@ -28,15 +33,16 @@
 </header>
 
 
-<div class="content">
+<div class="content-container" style="color: black">
 
-    <div id="content-header-info">
-        <span> Code Brigade </span>
-    </div>
+    <div class="content">
 
-
-    <div id="content-info">
-        <span> Welcome to Code Brigade </span>
+        <div class="content-header">
+            <h1>about team</h1>
+        </div>
+        <div class="content-body">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </div>
     </div>
 
 </div>
