Removind "site map" part, adding Habib's part to team members page, small detales in css

--- a/about_team_members.html
+++ b/about_team_members.html
@@ -7,7 +7,7 @@
     <title>Code brigade - Team members</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
-<body>
+<body style="background-image: url('media/membersbackground.jpeg'); background-repeat: no-repeat; background-size:cover">
 <header>
 
     <ul>
@@ -17,17 +17,20 @@
             </a>
         </li>
         <li>
-            <a href="about_team_members.html">Information about team members</a>
+            <a href="about_team_members.html">Team Members</a>
         </li>
         <li>
-            <a href="introduction_to_team.html">Introduction of the team</a>
+            <a href="introduction_to_team.html">Introduction of the Team</a>
         </li>
         <li>
-            <a href="about_hour_of_code.html">Information about the Hour of Code event</a>
+            <a href="about_hour_of_code.html">Our "Hour of Code" Event</a>
         </li>
         <li>
-            <a href="about_website.html">Information about our Website project</a>
+            <a href="about_website.html">Our Website project</a>
         </li>
+		  <li>
+			<a href="index.html">Main Menu</a>
+		</li>
     </ul>
 
 </header>
@@ -49,7 +52,7 @@
                     </div>
 
                     <div class="team-member-info">
-                        <h2>Nahid</h2>
+                        <h2>Nahid Abdulazimov</h2>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </div>
@@ -59,7 +62,7 @@
                     </div>
 
                     <div class="team-member-info">
-                        <h2>Nahid</h2>
+                        <h2>Emil Hajiyev</h2>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </div>
@@ -71,18 +74,18 @@
                     </div>
 
                     <div class="team-member-info">
-                        <h2>Nahid</h2>
+                        <h2>Rustam Habibov</h2>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="team-member-photo">
-                        <img style="height: 100%; border-radius: 5px;" src="media/empty_profile_photo.png" alt="Profile photo">
+                        <img style="height: 100%; border-radius: 5px;" src="media/habib-kerimov.jpeg" alt="Profile photo">
                     </div>
 
                     <div class="team-member-info">
-                        <h2>Nahid</h2>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <h2>Habib Kerimov</h2>
+                        I was born on March 12, 2002. I am from Guba and I am a BBA student at ADA. Although I am a BBA student, working with websites is not new to me: I used Wix, a website builder. Regardless, I am new to coding. I like to learn new things, always be the best in my field, control my emotions and make marginal decisions. My hobbies are snowboarding, creating or editing videos, and finding occasions where I can use my creativity without limits.
                     </div>
                 </div>
             </div>
@@ -97,26 +100,16 @@
     <div class="footer-item-container">
 
     </div>
-    <div class="footer-item-container">
+    <div class="footer-item-container" style="color: black;">
         <div class="contact">
             <h3>Contact us:</h3>
             <p>
                 <span class="contact-name-item">Email:</span>
-                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
+                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:rgb(0, 0, 0); text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
                 <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
             </p>
-        </div>
-    </div>
-
-    <div class="footer-item-container">
-        <div class="shortcuts">
-            <h3>Site map:</h3>
-            <p><a href="about_team_members.html" class="shortcut-item">Information about team members</a></p>
-            <p><a href="introduction_to_team.html" class="shortcut-item">Introduction of the team</a></p>
-            <p><a href="about_hour_of_code.html" class="shortcut-item">Preparations for the Hour of Code event</a></p>
-            <p><a href="about_website.html" class="shortcut-item">Information about our Website project</a></p>
         </div>
     </div>
 
