--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade</title>
+    <title>Main Menu</title>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -12,16 +12,16 @@
 
     <ul>
         <li>
-            <a href="about_team_members.html">Information about team members</a>
+            <a href="about_team_members.html">Team Members</a>
         </li>
         <li>
-            <a href="introduction_to_team.html">Introduction of the team</a>
+            <a href="introduction_to_team.html">Introduction of the Team</a>
         </li>
         <li>
-            <a href="about_hour_of_code.html">Information about the Hour of Code event</a>
+            <a href="about_hour_of_code.html">Our "Hour of Code" Event</a>
         </li>
         <li>
-            <a href="about_website.html">Information about our Website project</a>
+            <a href="about_website.html">Our Website Project</a>
         </li>
     </ul>
 
@@ -31,12 +31,14 @@
 <div class="content">
 
     <div id="content-header-info">
-        <span> Code Brigade </span>
+        <span> Welcome to Code Brigade </span>
     </div>
-
+	 <div>
+		 <img id="main-logo" src="media/logo.png">
+	 </div>
 
     <div id="content-info">
-        <span> Welcome to Code Brigade </span>
+        <span> Make it work, make it right, make it fast </span>
     </div>
 
 </div>
@@ -58,17 +60,6 @@
             </p>
         </div>
     </div>
-
-    <div class="footer-item-container">
-        <div class="shortcuts">
-            <h3>Site map:</h3>
-            <p><a href="about_team_members.html" class="shortcut-item">Information about team members</a></p>
-            <p><a href="introduction_to_team.html" class="shortcut-item">Introduction of the team</a></p>
-            <p><a href="about_hour_of_code.html" class="shortcut-item">Preparations for the Hour of Code event</a></p>
-            <p><a href="about_website.html" class="shortcut-item">Information about our Website project</a></p>
-        </div>
-    </div>
-
     <div class="footer-item-container">
     </div>
 
