--- a/introduction_to_team.html
+++ b/introduction_to_team.html
@@ -17,17 +17,20 @@
             </a>
         </li>
         <li>
-            <a href="about_team_members.html">Information about team members</a>
+            <a href="about_team_members.html">Team Members</a>
         </li>
         <li>
-            <a href="introduction_to_team.html">Introduction of the team</a>
+            <a href="introduction_to_team.html">Introduction of the Team</a>
         </li>
         <li>
-            <a href="about_hour_of_code.html">Information about the Hour of Code event</a>
+            <a href="about_hour_of_code.html">Our "Hour of Code" Event</a>
         </li>
         <li>
-            <a href="about_website.html">Information about our Website project</a>
+            <a href="about_website.html">Our Website Project</a>
         </li>
+		  <li>
+			<a href="index.html">Main Menu</a>
+		</li>
     </ul>
 
 </header>
@@ -61,16 +64,6 @@
             <p>
                 <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
             </p>
-        </div>
-    </div>
-
-    <div class="footer-item-container">
-        <div class="shortcuts">
-            <h3>Site map:</h3>
-            <p><a href="about_team_members.html" class="shortcut-item">Information about team members</a></p>
-            <p><a href="introduction_to_team.html" class="shortcut-item">Introduction of the team</a></p>
-            <p><a href="about_hour_of_code.html" class="shortcut-item">Preparations for the Hour of Code event</a></p>
-            <p><a href="about_website.html" class="shortcut-item">Information about our Website project</a></p>
         </div>
     </div>
 
