Small chenges in all pages

--- a/about_team_members.html
+++ b/about_team_members.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade - Team members</title>
+    <title>Team members</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
 <body style="background-image: url('media/membersbackground.jpeg'); background-repeat: no-repeat; background-size:cover">
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="team-member-info">
-                        <h2>Nahid Abdulazimov</h2>
+                        <h2>Emil Hajiyev (Team Leader)</h2>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="team-member-info">
-                        <h2>Emil Hajiyev</h2>
+                        <h2>Nahid Abdulazimov</h2>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                 <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:rgb(0, 0, 0); text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
-                <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
+                <span class="contact-name-item">Phones:</span> <i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
             </p>
         </div>
     </div>
