--- a/about_website.html
+++ b/about_website.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade - About</title>
+    <title>Website Project</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
 <body style="background-image: url('media/website_background.jpg')">
@@ -64,7 +64,7 @@
 					<i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
 			  </p>
 			  <p>
-					<span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
+					<span class="contact-name-item">Phones:</span> <i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
 			  </p>
 		 </div>
 	</div>
