--- a/introduction_to_team.html
+++ b/introduction_to_team.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade - About Team</title>
+    <title>About Team</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
-<body style="background-image: url('media/team_background.jpg'); background-repeat: no-repeat; background-size:cover">
+<body style="background-image: url('media/team_background.png'); background-repeat: no-repeat; background-size:cover">
 <header>
 
     <ul>
@@ -40,7 +40,7 @@
     <div class="content">
 
         <div class="content-header">
-            <h1>about team</h1>
+            <h1 id="team_header">"Code Brigade" Team</h1>
         </div>
         <div class="content-body">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -55,14 +55,14 @@
 
     </div>
     <div class="footer-item-container">
-        <div class="contact">
+        <div class="contact" style="color:black;">
             <h3>Contact us:</h3>
             <p>
                 <span class="contact-name-item">Email:</span>
-                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
+                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:black; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
-                <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
+                <span class="contact-name-item">Phones:</span> <i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
             </p>
         </div>
     </div>
