--- a/about_hour_of_code.html
+++ b/about_hour_of_code.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Code brigade - Code event</title>
+    <title>The Hour of Code</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
 <body>
@@ -41,7 +41,7 @@
     <div class="content">
 
         <div class="content-header">
-            <h1>about team</h1>
+            <h1>The Hour of Code</h1>
         </div>
         <div class="content-body">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -63,7 +63,7 @@
                 <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
-                <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
+                <span class="contact-name-item">Phones:</span> <i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
             </p>
         </div>
     </div>
