--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
-                <span class="contact-name-item">Phones:</span> <i>+994(55) 555 55-55</i>
+                <span class="contact-name-item">Phone:</span> <i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
             </p>
         </div>
     </div>
