--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="content">
 
     <div id="content-header-info">
-        <span> Welcome to Code Brigade </span>
+        <span> Welcome to the Code Brigade </span>
     </div>
 	 <div>
 		 <img id="main-logo" src="media/logo.png">
