--- a/about_hour_of_code.html
+++ b/about_hour_of_code.html
@@ -7,13 +7,13 @@
     <title>The Hour of Code</title>
     <link href="css/content-pages.css" rel="stylesheet"/>
 </head>
-<body>
+<body style="background-image: url('media/hour-of-code-background_edited.jpg'); background-repeat: no-repeat; background-size:cover">
 <header>
 
     <ul>
         <li style="float: left;">
             <a href="index.html">
-                <img style="width: 50px;" src="media/logo.png" alt="Logo">
+                <img style="width: 80px;" src="media/logo.png" alt="Logo">
             </a>
         </li>
         <li>
@@ -44,7 +44,15 @@
             <h1>The Hour of Code</h1>
         </div>
         <div class="content-body">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <p style="font-size:22px;">Our team's “The Hour of Code” event was held on March 14th. We arranged our event at the school lyceum №264.
+				 The event started at 10:00 and finished at 11:25. We participated as four members: Emil Hajiyev, Rustam Habibov, 
+				 Nahid Abdulazimov, and Habib Karimov. The number of the participants was 20 students 18 of them from 10th grade 
+				 and 2 of them from 9th grade. The event started with the introduction of the event, members, then the presentation 
+				 about ADA University, and a presentation about the hour of code event. After, the students were made familiar with 
+				 their tasks on <a href="https://code.org/" target="_blank">code.org</a> and started their work on computers. All the participants were able to finish all the tasks 
+				 successfully. We helped them to solve their problems about tasks together as much possible as. At the end of the event, 
+				 the team provided the students with their code.org certificates which their names were written by one. All the students 
+				 were provided with the fair enough information about our university, "The Hour of Code" event, and programming.</p>
         </div>
     </div>
 
@@ -56,11 +64,11 @@
 
     </div>
     <div class="footer-item-container">
-        <div class="contact">
+        <div class="contact" style="color:black;">
             <h3>Contact us:</h3>
             <p>
                 <span class="contact-name-item">Email:</span>
-                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
+                <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:black; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
                 <span class="contact-name-item">Phones:</span> <i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
