--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
                 <i><a href="mailto: nabdulazimov14014@ada.edu.az" style="color:white; text-decoration:none;">nabdulazimov14014@ada.edu.az</a></i>
             </p>
             <p>
-<<<<<<< Updated upstream
-                <span class="contact-name-item">Phone:</span> <i>+994(51) 455 03-79</i>
-=======
-                <span class="contact-name-item">Phone: </span><i>+994(51) 455 03-79</i><span> (Emil Hajiyev)</span>
->>>>>>> Stashed changes
+                <span class="contact-name-item">Phone (Emil Hajiyev):</span> <i>+994(51) 455 03-79</i>
             </p>
         </div>
     </div>
