--- a/introduction_to_team.html
+++ b/introduction_to_team.html
@@ -35,15 +35,21 @@
 
 </header>
 
-<div class="content-container" style="color: black">
+<div class="content-container" style="color: black;">
 
     <div class="content">
 
         <div class="content-header">
             <h1 id="team_header">"Code Brigade" Team</h1>
         </div>
-        <div class="content-body">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        <div class="content-body" style="background-color:rgb(255, 255, 255, 0.5); font-size: 22px;">
+			<p>Our team was created in February 2022 on the Principles of Information Systems course 
+				by Dr. Araz Yusubov at the School of Information Technology and Engineering (SITE) at ADA University. 
+				Our team has been assembled to collaborate on projects that include the <a href="about_hour_of_code.html" target="_blank">Hour of Code</a> event, 
+				the <a href="about_website.html" target="_blank">Website Project</a>, and the Robotics Project. We successfully completed the first 2 projects 
+				(for detailed information about these projects, follow the hyperlinks). We decided to call our 
+				team the “Code Brigade”, as we all enjoy coding and working as a team. We are not afraid to make 
+				mistakes, we learn from them.</p>
         </div>
     </div>
 
@@ -66,10 +72,6 @@
             </p>
         </div>
     </div>
-
-    <div class="footer-item-container">
-    </div>
-
 </footer>
 </body>
 </html>
