--- a/about_hour_of_code.html
+++ b/about_hour_of_code.html
@@ -48,12 +48,17 @@
 				 The event started at 10:00 and finished at 11:25. We participated as four members: Emil Hajiyev, Rustam Habibov, 
 				 Nahid Abdulazimov, and Habib Karimov. The number of the participants was 20 students 18 of them from 10th grade 
 				 and 2 of them from 9th grade. The event started with the introduction of the event, members, then the presentation 
-				 about ADA University, and a presentation about the hour of code event. After, the students were made familiar with 
+				 about ADA University, and the presentation about "The Hour of Code" event. After, the students were made familiar with 
 				 their tasks on <a href="https://code.org/" target="_blank">code.org</a> and started their work on computers. All the participants were able to finish all the tasks 
 				 successfully. We helped them to solve their problems about tasks together as much possible as. At the end of the event, 
 				 the team provided the students with their code.org certificates which their names were written by one. All the students 
 				 were provided with the fair enough information about our university, "The Hour of Code" event, and programming.</p>
         </div>
+		  <div class="hour-code-img">
+			  <img src="/media/hour-of-code3.jpeg">
+			  <img src="/media/hour-of-code2.jpeg">
+			  <img src="/media/hour-of-code1.jpeg">
+		  </div>
     </div>
 
 </div>
